[project]
name = "kukufm-dl"
version = "0.1.0"
description = "A lightning-fast tool to download premium Kukufm content with full metadata preservation. Perfect for offline listening!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "m3u8>=6.0.0",
    "mutagen>=1.47.0",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]
